<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24"
    tools:context=".presentation.activity.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration"
        style="@style/BoldTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_42"
        android:layout_marginTop="128dp"
        android:hint="@string/enter_phone_number"
        android:textColor="@color/black"
        android:textColorHint="@color/heather"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_42"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        android:textColor="@color/black"
        android:textColorHint="@color/heather"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_42"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:textColor="@color/black"
        android:textColorHint="@color/heather"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etConfirmPassword"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_42"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_confirm_password"
        android:textColor="@color/black"
        android:textColorHint="@color/heather"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_48"
        android:layout_marginTop="@dimen/margin_64"
        android:text="@string/registration"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDoYouHaveAccount"
        style="@style/MediumTextView"
        android:text="@string/do_you_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        style="@style/BoldTextView"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        android:textSize="@dimen/textSize_12"
        android:textColor="@color/denim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDoYouHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>