<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24"
    tools:context=".presentation.activity.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_dot"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvFirstNameTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_name_dot"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirstNameTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLastNameTitle"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetUserData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/get_user_data"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvLastName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:hint="@string/first_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnGetUserData" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etFirstName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/save_data"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etLastName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnSaveData" />

</androidx.constraintlayout.widget.ConstraintLayout>